skills page: solved page height on mobile devices

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,4 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300&display=swap");
+
+html, body, #root {
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
